# colossus-rs

./: .gitignore  Cargo.toml  README.md
colossus-auth/: Cargo.toml
colossus-auth/src/: error.rs  extractor.rs  handler.rs  lib.rs  mode.rs  permissions.rs
colossus-rag/: Cargo.toml
colossus-rag/src/: assembler.rs  error.rs  expander.rs  expander_queries.rs  lib.rs  noop.rs  pipeline.rs  retriever.rs  router.rs  synthesizer.rs  traits.rs  types.rs
colossus-rag/tests/: assembler_tests.rs  expander_tests.rs  pipeline_tests.rs  retriever_tests.rs  router_tests.rs  synthesizer_tests.rs  types_tests.rs
spike/: Cargo.toml
spike/src/: lib.rs
spike/tests/: rig_spike.rs
